--- a/src/preparation.ipynb
+++ b/src/preparation.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
+    "\n",
     "from pathlib import Path\n",
     "repo_path = Path.cwd().parent"
    ]
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,14 +335,146 @@
     "       'BioClim_18', 'BioClim_19', 'Land Climate'])\n",
     "    return df_new\n",
     "\n",
+    "# Remove environment coordinates (but keep observation coordinates)\n",
+    "def remove_env_co(data):\n",
+    "    return data.drop(['env_latitude', 'env_longitude'], axis=1)\n",
+    "\n",
+    "\n",
     "data_environment = remove_binary_data(data_environment)\n",
     "data_observations = remove_lat_lon(data_observations)\n",
-    "data_merged = merge_obs_env(data_observations, data_environment)"
+    "data_merged = merge_obs_env(data_observations, data_environment)\n",
+    "data_merged = remove_env_co(data_merged)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "taxon_full_name         0\nobs_latitude            0\nobs_longitude           0\nCropland, rainfed       0\nHerbaceous cover        0\n                     ... \nBioClim_16           5782\nBioClim_17           5782\nBioClim_18           5782\nBioClim_19           5782\nLand Climate            0\nLength: 68, dtype: int64\n------------\ntaxon_full_name      0\nobs_latitude         0\nobs_longitude        0\nCropland, rainfed    0\nHerbaceous cover     0\n                    ..\nBioClim_16           0\nBioClim_17           0\nBioClim_18           0\nBioClim_19           0\nLand Climate         0\nLength: 68, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "def drop_nulls(data):\n",
+    "    # Count null values\n",
+    "    print(data.isnull().sum())\n",
+    "\n",
+    "    # Drop null values\n",
+    "    data = data_merged.dropna()\n",
+    "    print(\"------------\")\n",
+    "\n",
+    "    # Count null values again\n",
+    "    print(data.isnull().sum())\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "data_merged = drop_nulls(data_merged)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Land Climate contains 26 categories\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         taxon_full_name  obs_latitude  obs_longitude  Cropland, rainfed  \\\n",
+       "0  Glaucopsyche melanops     37.248281      -7.028985                  0   \n",
+       "1  Glaucopsyche melanops     37.248281      -7.028985                  0   \n",
+       "2  Glaucopsyche melanops     38.007240      -5.196228                  0   \n",
+       "3  Glaucopsyche melanops     37.955906      -5.690698                  0   \n",
+       "4  Glaucopsyche melanops     40.929592       0.838517                  0   \n",
+       "\n",
+       "   Herbaceous cover  Tree or shrub cover  \\\n",
+       "0                 0                    0   \n",
+       "1                 0                    0   \n",
+       "2                 0                    0   \n",
+       "3                 0                    0   \n",
+       "4                 0                    0   \n",
+       "\n",
+       "   Cropland, irrigated or post-flooding  \\\n",
+       "0                                     0   \n",
+       "1                                     0   \n",
+       "2                                     0   \n",
+       "3                                     1   \n",
+       "4                                     0   \n",
+       "\n",
+       "   Mosaic cropland (>50%) / natural vegetation (tree, shrub, herbaceous cover) (<50%)  \\\n",
+       "0                                                  0                                    \n",
+       "1                                                  0                                    \n",
+       "2                                                  0                                    \n",
+       "3                                                  0                                    \n",
+       "4                                                  0                                    \n",
+       "\n",
+       "   Mosaic natural vegetation (tree, shrub, herbaceous cover) (>50%) / cropland (<50%)   \\\n",
+       "0                                                  0                                     \n",
+       "1                                                  0                                     \n",
+       "2                                                  0                                     \n",
+       "3                                                  0                                     \n",
+       "4                                                  0                                     \n",
+       "\n",
+       "   Tree cover, broadleaved, evergreen, closed to open (>15%)  ...  BioClim_11  \\\n",
+       "0                                                  0          ...   12.032539   \n",
+       "1                                                  0          ...   12.032539   \n",
+       "2                                                  0          ...    9.097083   \n",
+       "3                                                  0          ...    7.902542   \n",
+       "4                                                  0          ...    9.137644   \n",
+       "\n",
+       "   BioClim_12  BioClim_13  BioClim_14  BioClim_15  BioClim_16  BioClim_17  \\\n",
+       "0       476.0        82.0         2.0   69.956024       231.0        18.0   \n",
+       "1       476.0        82.0         2.0   69.956024       231.0        18.0   \n",
+       "2       570.0        93.0         3.0   62.813576       254.0        26.0   \n",
+       "3       656.0       106.0         4.0   62.395721       290.0        30.0   \n",
+       "4       596.0        84.0        16.0   39.602062       230.0        94.0   \n",
+       "\n",
+       "   BioClim_18  BioClim_19  Land Climate  \n",
+       "0        21.0       203.0            25  \n",
+       "1        21.0       203.0            25  \n",
+       "2        30.0       227.0            18  \n",
+       "3        34.0       265.0             2  \n",
+       "4       134.0       122.0            25  \n",
+       "\n",
+       "[5 rows x 68 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>taxon_full_name</th>\n      <th>obs_latitude</th>\n      <th>obs_longitude</th>\n      <th>Cropland, rainfed</th>\n      <th>Herbaceous cover</th>\n      <th>Tree or shrub cover</th>\n      <th>Cropland, irrigated or post-flooding</th>\n      <th>Mosaic cropland (&gt;50%) / natural vegetation (tree, shrub, herbaceous cover) (&lt;50%)</th>\n      <th>Mosaic natural vegetation (tree, shrub, herbaceous cover) (&gt;50%) / cropland (&lt;50%)</th>\n      <th>Tree cover, broadleaved, evergreen, closed to open (&gt;15%)</th>\n      <th>...</th>\n      <th>BioClim_11</th>\n      <th>BioClim_12</th>\n      <th>BioClim_13</th>\n      <th>BioClim_14</th>\n      <th>BioClim_15</th>\n      <th>BioClim_16</th>\n      <th>BioClim_17</th>\n      <th>BioClim_18</th>\n      <th>BioClim_19</th>\n      <th>Land Climate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.248281</td>\n      <td>-7.028985</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>12.032539</td>\n      <td>476.0</td>\n      <td>82.0</td>\n      <td>2.0</td>\n      <td>69.956024</td>\n      <td>231.0</td>\n      <td>18.0</td>\n      <td>21.0</td>\n      <td>203.0</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.248281</td>\n      <td>-7.028985</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>12.032539</td>\n      <td>476.0</td>\n      <td>82.0</td>\n      <td>2.0</td>\n      <td>69.956024</td>\n      <td>231.0</td>\n      <td>18.0</td>\n      <td>21.0</td>\n      <td>203.0</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Glaucopsyche melanops</td>\n      <td>38.007240</td>\n      <td>-5.196228</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>9.097083</td>\n      <td>570.0</td>\n      <td>93.0</td>\n      <td>3.0</td>\n      <td>62.813576</td>\n      <td>254.0</td>\n      <td>26.0</td>\n      <td>30.0</td>\n      <td>227.0</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.955906</td>\n      <td>-5.690698</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>7.902542</td>\n      <td>656.0</td>\n      <td>106.0</td>\n      <td>4.0</td>\n      <td>62.395721</td>\n      <td>290.0</td>\n      <td>30.0</td>\n      <td>34.0</td>\n      <td>265.0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Glaucopsyche melanops</td>\n      <td>40.929592</td>\n      <td>0.838517</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>9.137644</td>\n      <td>596.0</td>\n      <td>84.0</td>\n      <td>16.0</td>\n      <td>39.602062</td>\n      <td>230.0</td>\n      <td>94.0</td>\n      <td>134.0</td>\n      <td>122.0</td>\n      <td>25</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 68 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "# Create categorical values (from string to int)\n",
+    "def create_cat_values(column, column_name):\n",
+    "    column = column.copy()\n",
+    "    column = column.astype('category')\n",
+    "    d = column.cat.categories\n",
+    "    column = column.cat.codes\n",
+    "    uniques = len(column.unique())\n",
+    "    print(f'{column_name} contains {str(uniques)} categories')\n",
+    "    return column, d\n",
+    "\n",
+    "# Transfrom land climate names into categorial digits\n",
+    "data_merged['Land Climate'], categories_land = create_cat_values(data_merged['Land Climate'], 'Land Climate')\n",
+    "data_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
