Updated model file for more clear divide with prep file

--- a/src/preparation.ipynb
+++ b/src/preparation.ipynb
@@ -275,6 +275,18 @@
     "    data_observations.drop('location_latitude', inplace=True, axis=1)\n",
     "    return data_observations\n",
     "\n",
+    "def normalize(data_environment):\n",
+    "    # Normalize the data\n",
+    "    column_to_norm = ['elevation', 'WorldClim_prec_m06', 'WorldClim_srad_m06',\n",
+    "        'WorldClim_tavg_m06', 'WorldClim_tmax_m06', 'WorldClim_tmin_m06',\n",
+    "        'WorldClim_vapr_m06', 'WorldClim_wind_m06', 'BioClim_01', 'BioClim_02',\n",
+    "        'BioClim_03', 'BioClim_04', 'BioClim_05', 'BioClim_06', 'BioClim_07',\n",
+    "        'BioClim_08', 'BioClim_09', 'BioClim_10', 'BioClim_11', 'BioClim_12',\n",
+    "        'BioClim_13', 'BioClim_14', 'BioClim_15', 'BioClim_16', 'BioClim_17',\n",
+    "        'BioClim_18', 'BioClim_19']\n",
+    "    data_environment[column_to_norm] = data_environment[column_to_norm].apply(lambda x: (x - x.min()) / (x.max() - x.min()))\n",
+    "    return data_environment\n",
+    "\n",
     "def merge_obs_env(data_observations, data_environment):\n",
     "    data_observations = data_observations[['taxon_full_name','latitude','longitude']]\n",
     "    data = []\n",
@@ -339,9 +351,9 @@
     "def remove_env_co(data):\n",
     "    return data.drop(['env_latitude', 'env_longitude'], axis=1)\n",
     "\n",
-    "\n",
     "data_environment = remove_binary_data(data_environment)\n",
     "data_observations = remove_lat_lon(data_observations)\n",
+    "data_environment = normalize(data_environment)\n",
     "data_merged = merge_obs_env(data_observations, data_environment)\n",
     "data_merged = remove_env_co(data_merged)"
    ]
@@ -428,29 +440,29 @@
        "4                                                  0                                     \n",
        "\n",
        "   Tree cover, broadleaved, evergreen, closed to open (>15%)  ...  BioClim_11  \\\n",
-       "0                                                  0          ...   12.032539   \n",
-       "1                                                  0          ...   12.032539   \n",
-       "2                                                  0          ...    9.097083   \n",
-       "3                                                  0          ...    7.902542   \n",
-       "4                                                  0          ...    9.137644   \n",
+       "0                                                  0          ...    0.896901   \n",
+       "1                                                  0          ...    0.896901   \n",
+       "2                                                  0          ...    0.813600   \n",
+       "3                                                  0          ...    0.779702   \n",
+       "4                                                  0          ...    0.814751   \n",
        "\n",
        "   BioClim_12  BioClim_13  BioClim_14  BioClim_15  BioClim_16  BioClim_17  \\\n",
-       "0       476.0        82.0         2.0   69.956024       231.0        18.0   \n",
-       "1       476.0        82.0         2.0   69.956024       231.0        18.0   \n",
-       "2       570.0        93.0         3.0   62.813576       254.0        26.0   \n",
-       "3       656.0       106.0         4.0   62.395721       290.0        30.0   \n",
-       "4       596.0        84.0        16.0   39.602062       230.0        94.0   \n",
+       "0    0.120230    0.170561    0.013245    0.610326    0.173913    0.036511   \n",
+       "1    0.120230    0.170561    0.013245    0.610326    0.173913    0.036511   \n",
+       "2    0.147202    0.196262    0.019868    0.543820    0.193144    0.052738   \n",
+       "3    0.171879    0.226636    0.026490    0.539929    0.223244    0.060852   \n",
+       "4    0.154663    0.175234    0.105960    0.327687    0.173077    0.190669   \n",
        "\n",
        "   BioClim_18  BioClim_19  Land Climate  \n",
-       "0        21.0       203.0            25  \n",
-       "1        21.0       203.0            25  \n",
-       "2        30.0       227.0            18  \n",
-       "3        34.0       265.0             2  \n",
-       "4       134.0       122.0            25  \n",
+       "0    0.030612    0.166667            25  \n",
+       "1    0.030612    0.166667            25  \n",
+       "2    0.043732    0.188525            18  \n",
+       "3    0.049563    0.223133             2  \n",
+       "4    0.195335    0.092896            25  \n",
        "\n",
        "[5 rows x 68 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>taxon_full_name</th>\n      <th>obs_latitude</th>\n      <th>obs_longitude</th>\n      <th>Cropland, rainfed</th>\n      <th>Herbaceous cover</th>\n      <th>Tree or shrub cover</th>\n      <th>Cropland, irrigated or post-flooding</th>\n      <th>Mosaic cropland (&gt;50%) / natural vegetation (tree, shrub, herbaceous cover) (&lt;50%)</th>\n      <th>Mosaic natural vegetation (tree, shrub, herbaceous cover) (&gt;50%) / cropland (&lt;50%)</th>\n      <th>Tree cover, broadleaved, evergreen, closed to open (&gt;15%)</th>\n      <th>...</th>\n      <th>BioClim_11</th>\n      <th>BioClim_12</th>\n      <th>BioClim_13</th>\n      <th>BioClim_14</th>\n      <th>BioClim_15</th>\n      <th>BioClim_16</th>\n      <th>BioClim_17</th>\n      <th>BioClim_18</th>\n      <th>BioClim_19</th>\n      <th>Land Climate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.248281</td>\n      <td>-7.028985</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>12.032539</td>\n      <td>476.0</td>\n      <td>82.0</td>\n      <td>2.0</td>\n      <td>69.956024</td>\n      <td>231.0</td>\n      <td>18.0</td>\n      <td>21.0</td>\n      <td>203.0</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.248281</td>\n      <td>-7.028985</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>12.032539</td>\n      <td>476.0</td>\n      <td>82.0</td>\n      <td>2.0</td>\n      <td>69.956024</td>\n      <td>231.0</td>\n      <td>18.0</td>\n      <td>21.0</td>\n      <td>203.0</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Glaucopsyche melanops</td>\n      <td>38.007240</td>\n      <td>-5.196228</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>9.097083</td>\n      <td>570.0</td>\n      <td>93.0</td>\n      <td>3.0</td>\n      <td>62.813576</td>\n      <td>254.0</td>\n      <td>26.0</td>\n      <td>30.0</td>\n      <td>227.0</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.955906</td>\n      <td>-5.690698</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>7.902542</td>\n      <td>656.0</td>\n      <td>106.0</td>\n      <td>4.0</td>\n      <td>62.395721</td>\n      <td>290.0</td>\n      <td>30.0</td>\n      <td>34.0</td>\n      <td>265.0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Glaucopsyche melanops</td>\n      <td>40.929592</td>\n      <td>0.838517</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>9.137644</td>\n      <td>596.0</td>\n      <td>84.0</td>\n      <td>16.0</td>\n      <td>39.602062</td>\n      <td>230.0</td>\n      <td>94.0</td>\n      <td>134.0</td>\n      <td>122.0</td>\n      <td>25</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 68 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>taxon_full_name</th>\n      <th>obs_latitude</th>\n      <th>obs_longitude</th>\n      <th>Cropland, rainfed</th>\n      <th>Herbaceous cover</th>\n      <th>Tree or shrub cover</th>\n      <th>Cropland, irrigated or post-flooding</th>\n      <th>Mosaic cropland (&gt;50%) / natural vegetation (tree, shrub, herbaceous cover) (&lt;50%)</th>\n      <th>Mosaic natural vegetation (tree, shrub, herbaceous cover) (&gt;50%) / cropland (&lt;50%)</th>\n      <th>Tree cover, broadleaved, evergreen, closed to open (&gt;15%)</th>\n      <th>...</th>\n      <th>BioClim_11</th>\n      <th>BioClim_12</th>\n      <th>BioClim_13</th>\n      <th>BioClim_14</th>\n      <th>BioClim_15</th>\n      <th>BioClim_16</th>\n      <th>BioClim_17</th>\n      <th>BioClim_18</th>\n      <th>BioClim_19</th>\n      <th>Land Climate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.248281</td>\n      <td>-7.028985</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0.896901</td>\n      <td>0.120230</td>\n      <td>0.170561</td>\n      <td>0.013245</td>\n      <td>0.610326</td>\n      <td>0.173913</td>\n      <td>0.036511</td>\n      <td>0.030612</td>\n      <td>0.166667</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.248281</td>\n      <td>-7.028985</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0.896901</td>\n      <td>0.120230</td>\n      <td>0.170561</td>\n      <td>0.013245</td>\n      <td>0.610326</td>\n      <td>0.173913</td>\n      <td>0.036511</td>\n      <td>0.030612</td>\n      <td>0.166667</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Glaucopsyche melanops</td>\n      <td>38.007240</td>\n      <td>-5.196228</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0.813600</td>\n      <td>0.147202</td>\n      <td>0.196262</td>\n      <td>0.019868</td>\n      <td>0.543820</td>\n      <td>0.193144</td>\n      <td>0.052738</td>\n      <td>0.043732</td>\n      <td>0.188525</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Glaucopsyche melanops</td>\n      <td>37.955906</td>\n      <td>-5.690698</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0.779702</td>\n      <td>0.171879</td>\n      <td>0.226636</td>\n      <td>0.026490</td>\n      <td>0.539929</td>\n      <td>0.223244</td>\n      <td>0.060852</td>\n      <td>0.049563</td>\n      <td>0.223133</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Glaucopsyche melanops</td>\n      <td>40.929592</td>\n      <td>0.838517</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0.814751</td>\n      <td>0.154663</td>\n      <td>0.175234</td>\n      <td>0.105960</td>\n      <td>0.327687</td>\n      <td>0.173077</td>\n      <td>0.190669</td>\n      <td>0.195335</td>\n      <td>0.092896</td>\n      <td>25</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 68 columns</p>\n</div>"
      },
      "metadata": {},
      "execution_count": 5
@@ -469,6 +481,7 @@
     "\n",
     "# Transfrom land climate names into categorial digits\n",
     "data_merged['Land Climate'], categories_land = create_cat_values(data_merged['Land Climate'], 'Land Climate')\n",
+    "\n",
     "data_merged.head()"
    ]
   },
