Add some more markdown to notebooks

--- a/src/preparation.ipynb
+++ b/src/preparation.ipynb
@@ -369,7 +369,31 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "taxon_full_name         0\nobs_latitude            0\nobs_longitude           0\nCropland, rainfed       0\nHerbaceous cover        0\n                     ... \nBioClim_16           5782\nBioClim_17           5782\nBioClim_18           5782\nBioClim_19           5782\nLand Climate            0\nLength: 68, dtype: int64\n------------\ntaxon_full_name      0\nobs_latitude         0\nobs_longitude        0\nCropland, rainfed    0\nHerbaceous cover     0\n                    ..\nBioClim_16           0\nBioClim_17           0\nBioClim_18           0\nBioClim_19           0\nLand Climate         0\nLength: 68, dtype: int64\n"
+      "taxon_full_name         0\n",
+      "obs_latitude            0\n",
+      "obs_longitude           0\n",
+      "Cropland, rainfed       0\n",
+      "Herbaceous cover        0\n",
+      "                     ... \n",
+      "BioClim_16           5782\n",
+      "BioClim_17           5782\n",
+      "BioClim_18           5782\n",
+      "BioClim_19           5782\n",
+      "Land Climate            0\n",
+      "Length: 68, dtype: int64\n",
+      "------------\n",
+      "taxon_full_name      0\n",
+      "obs_latitude         0\n",
+      "obs_longitude        0\n",
+      "Cropland, rainfed    0\n",
+      "Herbaceous cover     0\n",
+      "                    ..\n",
+      "BioClim_16           0\n",
+      "BioClim_17           0\n",
+      "BioClim_18           0\n",
+      "BioClim_19           0\n",
+      "Land Climate         0\n",
+      "Length: 68, dtype: int64\n"
      ]
     }
    ],
