Add last visualisation coordinates boundary

--- a/src/model_visualise.ipynb
+++ b/src/model_visualise.ipynb
@@ -920,8 +920,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_positives(df_env_no_water, judge_species4, .5)\n",
-    "# preds = plot_probability(df_env_no_water, judge_species4, .01)"
+    "# plot_positives(df_env_no_water, judge_species4, .5)\n",
+    "preds = plot_probability(df_env_no_water, judge_species4, .01)"
    ]
   },
   {
@@ -942,7 +942,7 @@
   },
   {
    "source": [
-    "# Visualisations with SDM optimalisations\n",
+    "# 8. Visualisations with SDM optimalisations\n",
     "\n",
     "This chapter will contain information on all optimalisations that were executed. None of the optimalisations have been added to the final base model, because as ICT students it was hard to decide whether a optimalisation has a positive effect\n",
     "\n",
@@ -953,18 +953,26 @@
     "- Boxplot\n",
     "- Precision, recall, and F1-score\n",
     "\n",
-    "[JOCHEEEEEEEEEEM]"
+    "If you want indept information about the evaluation, you are referred to the final report.\n",
+    "\n",
+    "The following were the optimalisations tested:\n",
+    "\n",
+    "1. Oversampling\n",
+    "1. Feature dropping\n",
+    "1. Plotting predictions within X distance of nearest observation"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "# Using oversampling\n",
+    "## 8.1. Oversampling\n",
     "\n",
-    "The visualisations above all look great, but now, let us check wheter using ovesampling will increase the model's accuracy.\n",
+    "The visualisations above all look great, but now, let us check wheter using ovesampling will increase the model's perfomance.\n",
     "\n",
-    "So we will train our final base model (model 3) with oversampling enabled, and predict how much chance a butterfly has on existing on each coordinate of the European environment dataset again."
+    "So we will train our final base model (model 3) with oversampling enabled, and predict how much chance a butterfly has on existing on each coordinate of the European environment dataset again.\n",
+    "\n",
+    "Oversampling is a technique that multiplace the categories with less data values and increases its data size. For this project the approach taken with oversampling was multiplying all the values to the same amount as species with most observations."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -981,7 +989,7 @@
   },
   {
    "source": [
-    "## Normal visualisation"
+    "### Normal visualisation (final base model)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -997,7 +1005,7 @@
   },
   {
    "source": [
-    "## Visualisation with oversampling"
+    "### Visualisation with oversampling"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1013,14 +1021,14 @@
   },
   {
    "source": [
-    "As you can see oversampling removes the model's certainty a species is at a certain location at places the model was a little certain before."
+    "As you can see oversampling improves the model's certainty percentage at places it wasn't present. This changes the output of the model."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## Analysis"
+    "### Analysis"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1036,10 +1044,8 @@
   },
   {
    "source": [
-    "# Feature dropping (coordinates)\n",
-    "Now let us experiment with training model 3 again, but this time without using the coordinates.\n",
-    "\n",
-    "Also we will show all possible visualisations to be able to compare them with each other."
+    "## 8.2. Feature dropping (coordinates)\n",
+    "Now let us experiment with dropping the coordinates, to see how the output of the model changes."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1064,7 +1070,7 @@
   },
   {
    "source": [
-    "## Normal visualisation"
+    "### Normal visualisation"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1080,7 +1086,7 @@
   },
   {
    "source": [
-    "## Visualisation with feature dropping (coordinates)"
+    "### Visualisation with feature dropping (coordinates)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1096,7 +1102,159 @@
   },
   {
    "source": [
-    "## Visualisation with oversampling"
+    "We can see that the results here have less impact on the certainty percentage, but more on the distribution of a butterfly."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Analysis"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyse(X_noco_train, X_noco_test, y_noco_train, y_noco_test, model3_without_coordinates, 0.5)"
+   ]
+  },
+  {
+   "source": [
+    "## 8.3 Plotting predictions within X distance of nearest observation\n",
+    "\n",
+    "Vincent came with a request to not plot predictions that were further than distance X from the nearest observation. For the prototype we created a function which is able to draw the maximum and minimum latitude and longitude values, which then creates a rectengle with the species living habitat. It is important to know the function is not at its final stages, and will need to be researched futher, as having multiple cluster of the same species will bring problems.\n",
+    "\n",
+    "In the POC the distance of 1 latitude and longitude point was used, which translates to about 110km."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the Max/Min Lat/Lon values for a species\n",
+    "def get_maxcoordinates(df, species, lat_lon_points):\n",
+    "    df_spec = df[df['taxon_full_name'] == species]\n",
+    "    maxminval = []\n",
+    "    latmax = df_spec['obs_latitude'].max() + lat_lon_points\n",
+    "    latmin = df_spec['obs_latitude'].min() - lat_lon_points\n",
+    "    lonmax = df_spec['obs_longitude'].max() + lat_lon_points\n",
+    "    lonmin = df_spec['obs_longitude'].min() - lat_lon_points\n",
+    "    maxminval.append(latmax)\n",
+    "    maxminval.append(latmin)\n",
+    "    maxminval.append(lonmax)\n",
+    "    maxminval.append(lonmin)\n",
+    "    return maxminval\n",
+    "\n",
+    "# This is the same function as plot_probability, now filtering out the values between the maximum and minimum latitiude/longitude\n",
+    "def plot_probability_distancefurther_x(environment, judge, boundary, maxmin):\n",
+    "    positives = environment[judge >= boundary]\n",
+    "    judge_positives = judge[judge >= boundary]\n",
+    "\n",
+    "    preds = positives[['lat_latlon', 'lon_latlon']]\n",
+    "    preds['judge'] = judge_positives\n",
+    "    preds = preds[preds[\"lat_latlon\"] < maxmin[0]]\n",
+    "    preds = preds[preds[\"lat_latlon\"] > maxmin[1]]\n",
+    "    preds = preds[preds[\"lon_latlon\"] < maxmin[2]]\n",
+    "    preds = preds[preds[\"lon_latlon\"] > maxmin[3]]\n",
+    "    preds.reset_index()\n",
+    "\n",
+    "    positives = positives[positives[\"lat_latlon\"] < maxmin[0]]\n",
+    "    positives = positives[positives[\"lat_latlon\"] > maxmin[1]]\n",
+    "    positives = positives[positives[\"lon_latlon\"] < maxmin[2]]\n",
+    "    positives = positives[positives[\"lon_latlon\"] > maxmin[3]]\n",
+    "    world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
+    "\n",
+    "    ax = world.plot(color='white', edgecolor='black', figsize=(40, 40))\n",
+    "\n",
+    "    gdf = gpd.GeoDataFrame(\n",
+    "    positives,\n",
+    "    geometry=gpd.points_from_xy(preds['lon_latlon'],\n",
+    "    preds['lat_latlon']))\n",
+    "    gdf.plot(ax=ax,\n",
+    "    column=preds['judge'],\n",
+    "    legend=True,\n",
+    "    markersize=15,\n",
+    "    legend_kwds={'shrink': 0.5})\n",
+    "\n",
+    "    #Define map boundaries\n",
+    "    plt.xlim(-25, 43)\n",
+    "    plt.ylim(33, 72)\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Returns DataFrame with locations and prediction certainty\n",
+    "    return preds"
+   ]
+  },
+  {
+   "source": [
+    "### Normal visualisation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = plot_probability(df_env_no_water, judge_species4, .01)"
+   ]
+  },
+  {
+   "source": [
+    "### Visualisation with predictions within 1 distance of nearest observation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxminval = get_maxcoordinates(df, 4, 1)\n",
+    "preds = plot_probability_distancefurther_x(df_env_no_water, judge_species4, .5, maxminval)"
+   ]
+  },
+  {
+   "source": [
+    "This function works as expected"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## All visualisations\n",
+    "### Visualisation base model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = plot_probability(df_env_no_water, judge_species4, .01)"
+   ]
+  },
+  {
+   "source": [
+    "### Visualisation with oversampling"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1112,7 +1270,7 @@
   },
   {
    "source": [
-    "## Analysis"
+    "### Visualisation with feature dropping"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1123,8 +1281,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "analyse(X_noco_train, X_noco_test, y_noco_train, y_noco_test, model3_without_coordinates, 0.5)"
+    "preds = plot_probability(df_env_no_water, judge_species4_without_coordinates, .01)"
    ]
+  },
+  {
+   "source": [
+    "### Visualisation with predictions within 1 distance of nearest observation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxminval = get_maxcoordinates(df, 4, 1)\n",
+    "preds = plot_probability_distancefurther_x(df_env_no_water, judge_species4, .5, maxminval)"
+   ]
+  },
+  {
+   "source": [],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
