--- a/src/model_visualise.ipynb
+++ b/src/model_visualise.ipynb
@@ -1,8 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
@@ -16,8 +14,11 @@
     "1. Model 1 (first version of the Artificial Neural Network (ANN) model used to create the SDM)\n",
     "1. Model 2 (second version of the ANN modek used to create the SDM)\n",
     "1. Model 3 (final base model)\n",
-    "1. Visua"
-   ]
+    "1. Visualize the predictions with the final base model\n",
+    "1. Visualisations with SDM optimalisations"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -170,6 +171,7 @@
     "\n",
     "def get_index_of_observations(y_test):\n",
     "    \n",
+    "    np.asarray(y_test).astype('float32').reshape((-1,5))\n",
     "    \n",
     "    i = 0\n",
     "\n",
@@ -209,10 +211,10 @@
     "    \n",
     "    y2_pred_threshold = y2_pred.copy()\n",
     "\n",
-    "    for idx1, l in enumerate(y2_pred):\n",
-    "        for idx2, e in enumerate(l):\n",
+    "    for idx1, a in enumerate(y2_pred):\n",
+    "        for idx2, element in enumerate(a):\n",
     "\n",
-    "            if l[idx2] > threshold:\n",
+    "            if a[idx2] > threshold:\n",
     "                y2_pred_threshold[idx1, idx2] = 1\n",
     "\n",
     "            else:\n",
@@ -373,11 +375,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Only run the following code when runing the proof of concept (POC)**"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -417,11 +419,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Continuation of final data preperation"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -445,11 +447,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Split the data into input (X) and output (y) values"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -555,15 +557,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 5. Model 2 with SpargeTopKCategoricalAccuracy (k=2)\n",
     "\n",
     "This was the second version of our ANN that was used to create the SDM output. This network used `SpargeTopKCategoricalAccuracy` and `sparse_categorical_crossentropy` as metrics with `k=2`.\n",
     "\n",
     "**This model is used to compare the perfomance between different metrics.**"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -623,8 +625,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 6. Model 3 with Binary-Crossentropy (final base model, without optimalisations)\n",
     "Below you can see how we trained the final base model. This model has 5 Dense layers, wich 256, 128, 56, and 28 neurons respectively. The first 4 use relu activation, and the last uses sigmoid activation. \n",
@@ -632,7 +632,9 @@
     "We are also using the optimizer Adam with a learning rate of 0.001, the loss function binary-crossentropy, and with the regular accuracy metric.\n",
     "\n",
     "This function can also be enabled to use oversampling, normalizing the amount of each butterfly, to make them equal. However, this is not used right now but will be used later on in the notebook."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -695,8 +697,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 7. Visualize the predictions with the final base model\n",
     "Now it is time to start making visualisations, and see wheter the SDM is accurate.\n",
@@ -707,7 +707,9 @@
     "1. Change the land climate name into categorical data, to make it easier to distinguish for machines (from words to numbers).\n",
     "1. Remove allw water bodies, because butterflies can't live on water\n",
     "1. Normalize the data"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -739,11 +741,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Now, we will make predictions on how much chance a butterfly has on existing on each coordinate of the European environment dataset."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -768,11 +770,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "These two functions are able to visualise the predictions per species"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -832,18 +834,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Below you can see the visualisations of the five butterflies, predicted using our best model (the third one using binary-crossentropy)."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Species 0 (Agriades optilete)"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -856,11 +858,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Species 1 (Boloria titania)"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -873,11 +875,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Species 2 (Melanargia galathea)"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -890,11 +892,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Species 3 (Parnassius apollo)"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -907,11 +909,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Species 4 (Zerynthia rumina)"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -924,11 +926,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Analysis"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -940,8 +942,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 8. Visualisations with SDM optimalisations\n",
     "\n",
@@ -961,11 +961,11 @@
     "1. Oversampling\n",
     "1. Feature dropping\n",
     "1. Plotting predictions within X distance of nearest observation"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 8.1. Oversampling\n",
     "\n",
@@ -974,7 +974,9 @@
     "So we will train our final base model (model 3) with oversampling enabled, and predict how much chance a butterfly has on existing on each coordinate of the European environment dataset again.\n",
     "\n",
     "Oversampling is a technique that multiplace the categories with less data values and increases its data size. For this project the approach taken with oversampling was multiplying all the values to the same amount as species with most observations."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -987,11 +989,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Normal visualisation (final base model)"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1003,11 +1005,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Visualisation with oversampling"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1019,18 +1021,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "As you can see oversampling improves the model's certainty percentage at places it wasn't present. This changes the output of the model."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Analysis"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1042,12 +1044,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 8.2. Feature dropping (coordinates)\n",
     "Now let us experiment with dropping the coordinates, to see how the output of the model changes."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1068,11 +1070,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Normal visualisation"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1084,11 +1086,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Visualisation with feature dropping (coordinates)"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1100,18 +1102,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can see that the results here have less impact on the certainty percentage, but more on the distribution of a butterfly."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Analysis"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1123,15 +1125,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 8.3 Plotting predictions within X distance of nearest observation\n",
     "\n",
     "Vincent came with a request to not plot predictions that were further than distance X from the nearest observation. For the prototype we created a function which is able to draw the maximum and minimum latitude and longitude values, which then creates a rectengle with the species living habitat. It is important to know the function is not at its final stages, and will need to be researched futher, as having multiple cluster of the same species will bring problems.\n",
     "\n",
     "In the POC the distance of 1 latitude and longitude point was used, which translates to about 110km."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1195,11 +1197,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Normal visualisation"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1211,11 +1213,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Visualisation with predictions within 1 distance of nearest observation"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1228,19 +1230,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "This function works as expected"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## All visualisations\n",
     "### Visualisation base model"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1252,11 +1254,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Visualisation with oversampling"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1268,11 +1270,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Visualisation with feature dropping"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1284,11 +1286,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Visualisation with predictions within 1 distance of nearest observation"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1301,16 +1303,16 @@
    ]
   },
   {
+   "source": [],
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
+   "name": "python3",
    "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "language": "python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1322,7 +1324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.6-final"
   },
   "papermill": {
    "duration": 328.20954,
